{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 140,
  "lineage": "84da74da-5909-ab75-60ed-ad23e898793d",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:loadbalancer/app/awslb/53f0e74562df19c2",
            "arn_suffix": "app/awslb/53f0e74562df19c2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "awslb-1857833788.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:loadbalancer/app/awslb/53f0e74562df19c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "awslb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00374aa838a16e449"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cb38eee27b334bbe"
              },
              {
                "subnet_id": "subnet-0d78d16ad328e7d9b"
              }
            ],
            "subnets": [
              "subnet-0cb38eee27b334bbe",
              "subnet-0d78d16ad328e7d9b"
            ],
            "tags": {
              "Environment": "default_lb"
            },
            "tags_all": {
              "Environment": "default_lb"
            },
            "vpc_id": "vpc-04af0879188eabe8d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.nw.aws_subnet.vpc_pub_snet",
            "module.nw.aws_vpc.vpc_id",
            "module.sg.aws_security_group.aws_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:listener/app/awslb/53f0e74562df19c2/c09a7cf298f6fa9a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:targetgroup/awstg/2a9eadb74a8e3f41",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:listener/app/awslb/53f0e74562df19c2/c09a7cf298f6fa9a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:loadbalancer/app/awslb/53f0e74562df19c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.lb_id",
            "module.lb.aws_lb_target_group.lb_tg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:targetgroup/awstg/2a9eadb74a8e3f41",
            "arn_suffix": "targetgroup/awstg/2a9eadb74a8e3f41",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:091491814818:targetgroup/awstg/2a9eadb74a8e3f41",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "awstg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:internet-gateway/igw-05e3e78ae87e1a5e3",
            "id": "igw-05e3e78ae87e1a5e3",
            "owner_id": "091491814818",
            "tags": {
              "Name": "default_igw"
            },
            "tags_all": {
              "Name": "default_igw"
            },
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:route-table/rtb-00ec20abb479b63a2",
            "id": "rtb-00ec20abb479b63a2",
            "owner_id": "091491814818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e3e78ae87e1a5e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default_vpc_rt"
            },
            "tags_all": {
              "Name": "default_vpc_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_internet_gateway.vpc_igw",
            "module.nw.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_rta",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058028acac1cfb51c",
            "route_table_id": "rtb-00ec20abb479b63a2",
            "subnet_id": "subnet-0cb38eee27b334bbe"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.vpc_igw",
            "module.nw.aws_route_table.vpc_rt",
            "module.nw.aws_subnet.vpc_pub_snet",
            "module.nw.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "pub_sub-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0642a46d032c8dd1b",
            "route_table_id": "rtb-00ec20abb479b63a2",
            "subnet_id": "subnet-0d78d16ad328e7d9b"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.vpc_igw",
            "module.nw.aws_route_table.vpc_rt",
            "module.nw.aws_subnet.vpc_pub_snet",
            "module.nw.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_pub_snet",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-0cb38eee27b334bbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb38eee27b334bbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pub_snet"
            },
            "tags_all": {
              "Name": "default_pub_snet"
            },
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "pub_sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-0d78d16ad328e7d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d78d16ad328e7d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pub_snet"
            },
            "tags_all": {
              "Name": "default_pub_snet"
            },
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_pvt_snet",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pvt_sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-0e6b589837326ede8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6b589837326ede8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pvt_snet"
            },
            "tags_all": {
              "Name": "default_pvt_snet"
            },
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "pvt_sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-03f262f8aaf866f2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f262f8aaf866f2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pvt_snet"
            },
            "tags_all": {
              "Name": "default_pvt_snet"
            },
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:vpc/vpc-04af0879188eabe8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-01e0fcecb643bf94c",
            "default_route_table_id": "rtb-08ffd1a0102d8e7d4",
            "default_security_group_id": "sg-0a87040c4342480c9",
            "dhcp_options_id": "dopt-0712b866782dfabd1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04af0879188eabe8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ffd1a0102d8e7d4",
            "owner_id": "091491814818",
            "tags": {
              "Name": "default_vpc"
            },
            "tags_all": {
              "Name": "default_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:security-group/sg-051ff6403d00ba06d",
            "description": "all incoming",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051ff6403d00ba06d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws_ec2",
            "name_prefix": "",
            "owner_id": "091491814818",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default_sg"
            },
            "tags_all": {
              "Name": "default_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "sg_lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:security-group/sg-00374aa838a16e449",
            "description": "all incoming",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00374aa838a16e449",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws_lb",
            "name_prefix": "",
            "owner_id": "091491814818",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default_sg"
            },
            "tags_all": {
              "Name": "default_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04af0879188eabe8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}